# data-engineeering-frontier-lab

./: .gitignore  AGENTS.md  PLANS.md  README.md  TASKS.md  pyproject.toml
docs/: 00_PROJECT_BRIEF.md  01_CAPSTONE_SPEC.md  02_THREE_WEEK_PLAN.md  03_DATA_CONTRACTS.md  04_ARCHITECTURE_DECISIONS.md  05_SYSTEM_DESIGN_PROMPTS.md  06_INTERVIEW_STORIES.md  07_REVIEW_CHECKLIST.md
notes/: 01_python_package_architecture_primer.md
prompts/: 00_CODEX_STARTER_PROMPTS.md
src/energy_flex_pipeline/: __init__.py
src/energy_flex_pipeline/config/: __init__.py  settings.py
src/energy_flex_pipeline/domain/: __init__.py  time.py
tests/: test_config.py  test_package_import.py  test_time.py
