[project]
name = "energy-flex-pipeline"
version = "0.1.0"
description = "Local mini-lakehouse for practicing data engineering fundamentals with synthetic energy-flex data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
files = ["src", "tests"]
strict = true
warn_unused_configs = true
